Issue #8949: "z" format of PyArg_Parse*() functions doesn't accept bytes objects, as described in the documentation.